heavily reduced number of templated functions generated for thumb.
removed non-templated thumb option as compile times are still instant.

addresses #11

--- a/src/core/CMakeLists.txt
+++ b/src/core/CMakeLists.txt
@@ -15,8 +15,6 @@ cmake_minimum_required(VERSION 3.20.0)
 set(ENABLE_SCHEDULER ON)
 # compiler basically inlines everything
 set(SINGLE_FILE OFF)
-# actually slower for doom (~30fps slower), MUCH faster for everything else
-set(RELEASE_BUILD_THUMB OFF)
 # very big speedup
 set(RELEASE_BUILD_ARM OFF)
 # enable sanitizers
@@ -45,38 +43,24 @@ else ()
         arm7tdmi/arm7tdmi.cpp
         arm7tdmi/arm/arm.cpp
         arm7tdmi/thumb/thumb.cpp
-
-        arm7tdmi/arm/branch.cpp
-        arm7tdmi/arm/data_processing.cpp
-        arm7tdmi/arm/halfword_data_transfer.cpp
-        arm7tdmi/arm/single_data_transfer.cpp
-        arm7tdmi/arm/block_data_transfer.cpp
-        arm7tdmi/arm/multiply.cpp
-        arm7tdmi/arm/software_interrupt.cpp
-        arm7tdmi/arm/branch_and_exchange.cpp
-        arm7tdmi/arm/multiply_long.cpp
-        arm7tdmi/arm/single_data_swap.cpp
-
-        arm7tdmi/thumb/move_compare_add_subtract_immediate.cpp
-        arm7tdmi/thumb/hi_register_operations.cpp
-        arm7tdmi/thumb/load_address.cpp
-        arm7tdmi/thumb/conditional_branch.cpp
-        arm7tdmi/thumb/unconditional_branch.cpp
-        arm7tdmi/thumb/move_shifted_register.cpp
-        arm7tdmi/thumb/add_subtract.cpp
-        arm7tdmi/thumb/long_branch_with_link.cpp
-        arm7tdmi/thumb/alu_operations.cpp
-        arm7tdmi/thumb/add_offset_to_stack_pointer.cpp
-        arm7tdmi/thumb/pc_relative_load.cpp
-        arm7tdmi/thumb/load_store_with_register_offset.cpp
-        arm7tdmi/thumb/load_store_sign_extended_byte_halfword.cpp
-        arm7tdmi/thumb/load_store_with_immediate_offset.cpp
-        arm7tdmi/thumb/load_store_halfword.cpp
-        arm7tdmi/thumb/sp_relative_load_store.cpp
-        arm7tdmi/thumb/push_pop_registers.cpp
-        arm7tdmi/thumb/multiple_load_store.cpp
-        arm7tdmi/thumb/software_interrupt.cpp
     )
+
+    # these .cpp files are #included in the source
+    # on realse builds, due to them being template functions
+    if (NOT RELEASE_BUILD_ARM)
+        target_sources(GBA PRIVATE
+            arm7tdmi/arm/branch.cpp
+            arm7tdmi/arm/data_processing.cpp
+            arm7tdmi/arm/halfword_data_transfer.cpp
+            arm7tdmi/arm/single_data_transfer.cpp
+            arm7tdmi/arm/block_data_transfer.cpp
+            arm7tdmi/arm/multiply.cpp
+            arm7tdmi/arm/software_interrupt.cpp
+            arm7tdmi/arm/branch_and_exchange.cpp
+            arm7tdmi/arm/multiply_long.cpp
+            arm7tdmi/arm/single_data_swap.cpp
+        )
+    endif()
 endif()
 
 target_include_directories(GBA PUBLIC ${CMAKE_CURRENT_SOURCE_DIR})
@@ -115,7 +99,6 @@ target_compile_definitions(GBA PRIVATE
     GBA_DEBUG=$<BOOL:${GBA_DEBUG}>
     SINGLE_FILE=$<BOOL:${SINGLE_FILE}>
     ENABLE_SCHEDULER=$<BOOL:${ENABLE_SCHEDULER}>
-    RELEASE_BUILD_THUMB=$<BOOL:${RELEASE_BUILD_THUMB}>
     RELEASE_BUILD_ARM=$<BOOL:${RELEASE_BUILD_ARM}>
 )
 
