add blanking, remove bad assert(), fix `is_bitmap_mode()`, fixed fixed 16/32bit sram region reads, hle CpuSet.
- fixed vram dma overflow bug, thanks to [mgba](https://github.com/mgba-emu/mgba/issues/743).
- hle CpuSet bios (untested, should work though).
- fixed 16/32bit sram region reads by mirroring the single. (ie, 16bit read of 0xFF will return 0xFFFF).
- fix `is_bitmap_mode()` to also include mode5
- refactor io_reads to operate on 16bit reads by default.
- minor refactor of mem.cpp, it's more readable now. io r/w is still a mess atm.
- remove `assert(gba.cpu.halted);` from scheduler. this was left over from debugging scheduler issues in the past.
- blank ppu rendering (memset the screen).
- add std::execution to mode3/mode4 rendering. seems to slightly improve fps (~10fps) but that's within margin of error, so unsure if it has any benefit. though it doesn't harm performance so i've kept it. (this forced my to remove -fno-exceptions as well).

--- a/src/CMakeLists.txt
+++ b/src/CMakeLists.txt
@@ -44,7 +44,7 @@ list(APPEND gcc_flags
 if (CMAKE_BUILD_TYPE STREQUAL "Debug")
     list(APPEND gcc_flags -Og) # always enable otherwise debug builds would be too slow
 else()
-    list(APPEND gcc_flags -fno-rtti -fno-exceptions -Ofast)
+    list(APPEND gcc_flags -fno-rtti -Ofast)
 endif()
 
 list(APPEND clang_flags
@@ -92,7 +92,7 @@ list(APPEND clang_flags
 if (CMAKE_BUILD_TYPE STREQUAL "Debug")
     list(APPEND clang_flags -Og) # always enable otherwise debug builds would be too slow
 else()
-    list(APPEND gcc_flags -fno-rtti -fno-exceptions -Ofast)
+    list(APPEND clang_flags -fno-rtti -Ofast)
 endif()
 
 list(APPEND tcc_flags
