mark all tables / functions static (where possible).
reduces the binary size a lot in non-single_file file builds.

marking the tables static just ensured that they're not generated dynamically at run time.
an example of this was the sizes table in ppu.cpp, that was dynamically generated.

you would think the compiler would by default make the table static if its scope is a function,
and the table is marked constexpr, but no.

easy way to test this is to remove "static" from the thumb/arm instruction table.
drops from 800fps to ~5fps.

--- a/src/frontend/CMakeLists.txt
+++ b/src/frontend/CMakeLists.txt
@@ -28,8 +28,11 @@ add_library(imgui
     ${imgui_SOURCE_DIR}/imgui_draw.cpp
     ${imgui_SOURCE_DIR}/imgui_tables.cpp
     ${imgui_SOURCE_DIR}/imgui_widgets.cpp
-    ${imgui_SOURCE_DIR}/imgui_demo.cpp
 )
+
+if (CMAKE_BUILD_TYPE STREQUAL "Debug")
+    target_sources(imgui PRIVATE ${imgui_SOURCE_DIR}/imgui_demo.cpp)
+endif()
 
 target_include_directories(imgui PUBLIC ${imgui_SOURCE_DIR}/ ${imgui_SOURCE_DIR}/backends)
 
