first attempt at ppu windowing, blending, priority (read desc)
this doesnt have obj blending or obj windowing.
with the current design, its very tricky to implement.
will likely scrap all of render.cpp and rewrite it.

--- a/src/core/CMakeLists.txt
+++ b/src/core/CMakeLists.txt
@@ -13,7 +13,8 @@ if (SINGLE_FILE)
 else ()
     add_library(GBA
         gba.cpp
-        ppu.cpp
+        ppu/ppu.cpp
+        ppu/render.cpp
         mem.cpp
         dma.cpp
         timer.cpp
