better handle finding minizip
checks if minizip is first installed
if not, pulls minizip from github and builds it.

--- a/src/frontend/CMakeLists.txt
+++ b/src/frontend/CMakeLists.txt
@@ -21,7 +21,17 @@ FetchContent_Declare(imgui_club
     BUILD_COMMAND ""
 )
 
-FetchContent_MakeAvailable(imgui imgui_club)
+# todo: use this if minizip is not installed
+FetchContent_Declare(minizip
+    GIT_REPOSITORY https://github.com/madler/zlib.git
+    GIT_TAG        v1.2.12
+    GIT_PROGRESS   TRUE
+    CONFIGURE_COMMAND ""
+    BUILD_COMMAND ""
+)
+
+FetchContent_MakeAvailable(imgui)
+FetchContent_MakeAvailable(imgui_club)
 
 add_library(imgui
     ${imgui_SOURCE_DIR}/imgui.cpp
@@ -53,13 +63,64 @@ add_executable(main
 )
 
 find_package(SDL2 CONFIG REQUIRED)
-find_package(minizip CONFIG REQUIRED)
 
 target_link_libraries(main PRIVATE GBA)
 target_link_libraries(main PRIVATE SDL2::SDL2)
 target_link_libraries(main PRIVATE SDL2::SDL2main)
 target_link_libraries(main PRIVATE imgui imgui_club)
-target_link_libraries(main PRIVATE minizip::minizip)
+
+set(FOUND_MINIZIP FALSE)
+
+if (VCPKG_TOOLCHAIN)
+    find_package(minizip CONFIG)
+    if (DEFINED minizip_FOUND)
+        target_link_libraries(main PRIVATE minizip::minizip)
+
+        set(FOUND_MINIZIP TRUE)
+        message(STATUS "using vcpkg minizip")
+    endif()
+else()
+    # find package for minizip is broken on fedora
+    # not sure other distros have .cmake for minizip either
+    # so using the old fashioned find_() has to be used
+    find_library(minizip_lib minizip)
+    find_path(minizip_inc minizip)
+
+    if (minizip_lib AND minizip_inc)
+        target_link_libraries(main PRIVATE ${minizip_lib})
+        target_include_directories(main PRIVATE ${minizip_inc})
+
+        set(FOUND_MINIZIP TRUE)
+        message(STATUS "using system minizip")
+    endif()
+endif()
+
+# failed to find minizip installed, fetch and build manually
+if (NOT FOUND_MINIZIP)
+    # dont use FetchContent_MakeAvailable() here because it'll
+    # run the cmake file in zlib as it implicitly calls add_subdirectory
+    # causing all of zlib to be built.
+    FetchContent_GetProperties(minizip)
+    if (NOT minizip_POPULATED)
+        FetchContent_Populate(minizip)
+    endif()
+
+    add_library(minizip
+        ${minizip_SOURCE_DIR}/contrib/minizip/ioapi.c
+        ${minizip_SOURCE_DIR}/contrib/minizip/zip.c
+        ${minizip_SOURCE_DIR}/contrib/minizip/unzip.c
+    )
+
+    target_include_directories(minizip PRIVATE ${minizip_SOURCE_DIR}/contrib/minizip/)
+    # need the paths to be minizip/unzip.h
+    target_include_directories(minizip PUBLIC ${minizip_SOURCE_DIR}/contrib/)
+
+    find_package(ZLIB REQUIRED)
+    target_link_libraries(minizip PRIVATE ZLIB::ZLIB)
+    target_link_libraries(main PRIVATE minizip)
+
+    message(STATUS "using github minizip")
+endif()
 
 # target_add_common_cflags(main PRIVATE)
 target_apply_lto_in_release(imgui)
