--- a/src/frontend/backend/CMakeLists.txt
+++ b/src/frontend/backend/CMakeLists.txt
@@ -1,3 +1,7 @@
 cmake_minimum_required(VERSION 3.20.0)
 
-add_subdirectory(sdl2)
+if (NINTENDO_SWITCH)
+    add_subdirectory(nx)
+else()
+    add_subdirectory(sdl2)
+endif()
