--- a/src/frontend/CMakeLists.txt
+++ b/src/frontend/CMakeLists.txt
@@ -30,8 +30,17 @@ FetchContent_Declare(minizip
     BUILD_COMMAND ""
 )
 
+FetchContent_Declare(stb
+    GIT_REPOSITORY https://github.com/nothings/stb.git
+    GIT_TAG        af1a5bc352164740c1cc1354942b1c6b72eacb8a
+    GIT_PROGRESS   TRUE
+    CONFIGURE_COMMAND ""
+    BUILD_COMMAND ""
+)
+
 FetchContent_MakeAvailable(imgui)
 FetchContent_MakeAvailable(imgui_club)
+FetchContent_MakeAvailable(stb)
 
 add_library(imgui
     ${imgui_SOURCE_DIR}/imgui.cpp
@@ -45,8 +54,11 @@ target_include_directories(imgui PUBLIC ${imgui_SOURCE_DIR})
 
 # memory editor
 add_library(imgui_club INTERFACE)
-target_include_directories(imgui INTERFACE ${imgui_club_SOURCE_DIR}/imgui_memory_editor)
+target_include_directories(imgui_club INTERFACE ${imgui_club_SOURCE_DIR}/imgui_memory_editor)
 # fetch imgui is done!
+
+add_library(stb INTERFACE)
+target_include_directories(stb INTERFACE ${stb_SOURCE_DIR})
 
 # always include backend after fetching imgui
 add_subdirectory(backend)
@@ -134,8 +146,13 @@ target_compile_definitions(main PRIVATE
 )
 
 if (NINTENDO_SWITCH)
+    set(ASSETS ${CMAKE_SOURCE_DIR}/assets)
+
     # create romfs folder
     dkp_add_asset_target(main_romfs ${CMAKE_CURRENT_BINARY_DIR}/romfs)
+
+    configure_file(${ASSETS}/icons/icons8-mac-folder-64.png ${CMAKE_CURRENT_BINARY_DIR}/romfs/icons/icons8-mac-folder-64.png COPYONLY)
+    configure_file(${ASSETS}/icons/icons8-visual-game-boy-48.png ${CMAKE_CURRENT_BINARY_DIR}/romfs/icons/icons8-visual-game-boy-48.png COPYONLY)
 
     # setup nacp
     nx_generate_nacp(main.nacp
@@ -146,13 +163,13 @@ if (NINTENDO_SWITCH)
 
     # create nro (final binary)
     nx_create_nro(main
-        ICON ${CMAKE_SOURCE_DIR}/src/frontend/backend/nx/icon.jpg
+        ICON ${ASSETS}/icons/icon.jpg
         NACP main.nacp
         ROMFS main_romfs
     )
 
     # compile and add shaders to romfs
-    set(SHADER_FOLDER ${CMAKE_SOURCE_DIR}/src/frontend/backend/nx/shaders)
+    set(SHADER_FOLDER ${ASSETS}/shaders/nx)
 
     nx_add_shader_program(imgui_fsh ${SHADER_FOLDER}/imgui_fsh.glsl frag)
     nx_add_shader_program(imgui_vsh ${SHADER_FOLDER}/imgui_vsh.glsl vert)
@@ -163,4 +180,5 @@ if (NINTENDO_SWITCH)
             imgui_fsh
             imgui_vsh
     )
+
 endif()
