--- a/src/frontend/backend/nx/CMakeLists.txt
+++ b/src/frontend/backend/nx/CMakeLists.txt
@@ -6,11 +6,13 @@ add_library(backend
     ftpd_imgui/imgui_nx.cpp
 
     audio/audio.cpp
+    fs.cpp
 )
 
 target_link_libraries(backend PRIVATE imgui)
 target_link_libraries(backend PRIVATE GBA)
-target_link_libraries(backend PRIVATE deko3dd)
+target_link_libraries(backend PRIVATE deko3d)
+target_link_libraries(backend PRIVATE stb)
 
 # why is this even needed???
 target_include_directories(backend PRIVATE ${DEVKITPRO}/portlibs/switch/include)
